--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ramaraja&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <header>
+        <h3 class="logo">Medi <span class="logo-dot">.</span></h3>
+      <!-- NAV BAR? 
+            <li>Home</li>
+            <li>About</li>
+            <li>Blog</li>
+            <li>Contact</li>
+        </ul>
+        <a href="Sign-in">Sign in</a>
+        <button>Sign up</button>
+    --> 
+    </header>
+    <main>
+        <section>
+            <h1 class="main-title">Stay Productive & Work Remotely</h1>
+            <p class="main-info">The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. 
+                Whether you are working from home for the first time.</p>
+            <button class="main-btn">Learn More</button>
+        </section>
+        <section>
+            <img src="images/yoga-purple.png" alt="purple woman doing yoga">
+        </section>
+    </main>
 </body>
 </html>
